# WindowsScreenDeviceAgent

./: .env.sample  .gitignore  ExpoAgent.spec  ExpoScreenAgent.spec  README.md  config.yaml  download_latest_version.sh  main.py  program.json  pyproject.toml  rpc_handler.py  tb_client.py  test.md  version-info
.github/workflows/: build.yml
cms/: __init__.py  assets.md  assets.py  program.py
common/: __init__.py  config.py  logger.py  monitor.py  session.py
iot/: __init__.py  thingsboardclient.py
iot/handler/: __init__.py  attributes.py  rpc.py
player/: __init__.py  avatar_player.py  cmd_runner.py  key_mouse.py  play_asset.py  play_program.py  slide_player.py  slide_utils.py  video_player.py  web_player.py
system/: config.py  device_attr.py  device_info.py  device_monitor.py  device_status.py  device_temperature.py  monitor.py
